[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/game/world/weapon/Weapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/world/weapon/Sword.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/world/entity/components/hit_box/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/resources/sprite_frames/char/SwordPlayerSpriteFrames.tres" type="SpriteFrames" id=4]
[ext_resource path="res://assets/sprites/item/weapon/sword.png" type="Texture" id=5]
[ext_resource path="res://assets/audio/sfx/weapons/sword/sword_deflect.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/sfx/weapons/sword/sword_slash.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/sfx/weapons/sword/sword_downward_dash.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 6 )

[node name="Sword" instance=ExtResource( 1 )]
script = ExtResource( 2 )
__player_sprite_frames = ExtResource( 4 )
__collectible_sprite = ExtResource( 5 )
__attack_delay = 0.3
weapon_index = 0

[node name="OutHitBox" parent="." index="1" instance=ExtResource( 3 )]
__team = "player_team"

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutHitBox" index="0"]
position = Vector2( 8, -3 )
shape = SubResource( 1 )
disabled = true

[node name="SlashSound" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource( 7 )

[node name="DeflectSound" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 6 )

[node name="DownDashSound" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 8 )

[connection signal="attack_cycle_end" from="." to="." method="_on_Sword_attack_cycle_end"]
[connection signal="attacked" from="." to="." method="_on_Sword_attacked"]
[connection signal="downwards_attack" from="." to="." method="_on_Sword_downwards_attack"]
[connection signal="dropped" from="." to="." method="_on_Sword_dropped"]
[connection signal="hit_dealt" from="OutHitBox" to="." method="_on_OutHitBox_hit_dealt"]
